# Onyx-Vault

./: README.md  build_err.txt  check_reg.ps1  fix_reg.ps1  npm_out.txt  package-lock.json  package.json  tauri_help.txt  tauri_help_cmd.txt  vite.config.ts.timestamp-1771665153118-0afa948b23e7a.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  cargo_error.txt  check_err.json  check_err.txt  error_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AddItemModal.tsx  Dashboard.tsx  DeleteConfirmationModal.tsx  Header.tsx  PasswordDetails.tsx  PasswordItem.tsx  PasswordList.tsx  Sidebar.tsx  TitleBar.tsx
src/layouts/: DashboardLayout.tsx
src/pages/: CategoryPage.tsx  PasswordEditor.tsx  SecurityDashboard.tsx  Settings.tsx  UnlockScreen.tsx
src/store/: useStore.ts
