[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
keyring = "3.6.3"
reqwest = { version = "0.13.2", features = ["form", "json"] }
url = "2.5.8"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-single-instance = "2.4.0"
argon2 = "0.5.3"
rand = "0.9.2"
zeroize = "1.8.2"
chacha20poly1305 = "0.10.1"
base64 = { version = "0.22.1", features = ["alloc"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
